Reconfigure the AVF connections after device change

When the device changes, the internal AVFoundation connections
can change. Those are used by AVFImageCapture to capture the
last camera image. Tell AVFImageCapture that it needs to
update to avoid a crash with dangling pointers.

Fixes: QTBUG-96704
Change-Id: I07f1214bc28cbd0800f34fa7702c1a7108891e08
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit d7c4152a9cf9ebac86b9b07e78e675cb0ed5c937)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>